--- a/binarydistrict/style.css
+++ b/binarydistrict/style.css
@@ -132,3 +132,32 @@ body {
   height: 100px;
   padding-bottom: 40px;
 }
+
+.header {
+
+}
+
+.header__item {
+  display: inline-block;
+  width: 50%;
+  padding: 50px;
+}
+
+.footer__map {
+  position: relative;
+  height: 600px;
+}
+
+.footer__map iframe {
+  width: 100%;
+  height: 100%;
+  filter: grayscale(100%);
+  transition: .3s;
+}
+.footer__map iframe:hover {
+  filter: none;
+}
+
+.form-subscribe {
+  font-size: 20px;
+}
