--- a/birthday_countdown/style.css
+++ b/birthday_countdown/style.css
@@ -8,6 +8,9 @@
 * {
   box-sizing: border-box;
 }
+html {
+  cursor: none;
+}
 body {
   margin: 0;
   font: 30px 'PT Mono';
@@ -16,6 +19,7 @@ body {
 .container {
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,7 +69,8 @@ p {
   height: 100%;
   background: var(--main-color);
   z-index: 2;
-  padding: 50px;
+  padding: 60px;
+  padding-top: 45px;
   
   mix-blend-mode: luminosity;
 }
